--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Страница навигации</title>
     <style>
@@ -17,14 +17,15 @@
   </head>
   <body>
     <ul>
-      <li><a href="task-01.html">Задание 1</a></li>
-      <li><a href="task-02.html">Задание 2</a></li>
-      <li><a href="task-03.html">Задание 3</a></li>
-      <li><a href="task-04.html">Задание 4</a></li>
-      <li><a href="task-05.html">Задание 5</a></li>
-      <li><a href="task-06.html">Задание 6</a></li>
-      <li><a href="task-07.html">Задание 7</a></li>
-      <li><a href="task-08.html">Задание 8</a></li>
+      <li><a href="task_01.html">Задание 1</a></li>
+      <li><a href="task_02.html">Задание 2</a></li>
+      <li><a href="task_03.html">Задание 3</a></li>
+      <li><a href="task_04.html">Задание 4</a></li>
+      <li><a href="task_05.html">Задание 5</a></li>
+      <li><a href="task_06.html">Задание 6</a></li>
+      <li><a href="task_07.html">Задание 7</a></li>
+      <li><a href="task_08.html">Задание 8</a></li>
     </ul>
   </body>
 </html>
+
